src/app/components/share/share.component.scss
.share-text {
  width: 68%;
  margin: 99px auto 60px;
  font-size: 24px;
  line-height: 33px;
}

.share-email-text {
  margin: 60px auto 70px;
}

.share-square-container {
  position: relative;
  overflow: hidden;
  text-align: center;
  margin: 0 auto;
}
.share-square-container:before {
  content: "";
  display: block;
  padding-top: 100%;
}

.share-qr-canvas {
  display: block;
  padding: 0;
  margin: 0 auto;
}

.share-home-button-container {
  margin: 0 auto;
}

.share-home-button {
  font-size: 32px;
  background-color: #4a90e2;
  border-radius: 50%;
  margin: 0 auto;
  width: 58px;
  padding: 3.8px 0;
  cursor: pointer;
  user-select: none;

  &:hover {
    background-color: #4087da;
  }
}

.share-home-button-text {
  font-weight: 600;
  font-size: 24px;
  line-height: 33px;
  margin: 20px auto 0;
}

